// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar should generate a proper percentDone style 1`] = `
Object {
  "currencyText": Object {
    "color": "light",
  },
  "progress": Object {
    "backgroundColor": "white",
    "height": "100%",
    "width": "25%",
  },
  "progressBackground": Object {
    "backgroundColor": "#2a4930",
    "height": "6px",
  },
  "wrapper": Object {
    "color": "#fff",
  },
}
`;

exports[`ProgressBar should generate a proper percentDone style 2`] = `
Object {
  "currencyText": Object {
    "color": "dark",
  },
  "progress": Object {
    "backgroundColor": "#6bac43",
    "height": "100%",
    "width": "20%",
  },
  "progressBackground": Object {
    "backgroundColor": "#dddddd",
    "height": "6px",
  },
  "wrapper": Object {
    "color": "#303030",
  },
}
`;

exports[`ProgressBar should render with minimal props 1`] = `
<Progress>
  <div
    style={
      Object {
        "color": "#fff",
      }
    }
  >
    <div
      className="floating floating--left one-half display-inline-block push-half-top"
      style={
        Object {
          "verticalAlign": "middle",
        }
      }
    >
      <h5
        className="floating__item"
        data-spec="title"
      />
    </div>
    <div
      className="floating floating--right one-half display-inline-block"
      style={
        Object {
          "verticalAlign": "middle",
        }
      }
    >
      <Currency
        amount={undefined}
        baseHeadingSize="4"
        className="floating__item text-right"
        roundCurrency={true}
        theme="light"
      >
        <div
          className="floating text-light-primary floating__item text-right"
        >
          <h6
            className="floating__item flush"
            style={
              Object {
                "paddingRight": "5px",
              }
            }
          >
            $
          </h6>
          <h4
            className="floating__item flush"
            style={undefined}
          >
            NaN
          </h4>
        </div>
      </Currency>
    </div>
    <Progress
      percentDone={undefined}
    >
      <div
        className="one-whole"
        style={
          Object {
            "backgroundColor": "#2a4930",
            "height": "6px",
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "white",
              "height": "100%",
              "width": "0%",
            }
          }
        />
      </div>
    </Progress>
  </div>
</Progress>
`;
